# oped

./: .gitignore  README.md
oped/: CMakeLists.txt  package.xml
oped_teleopp/: CMakeLists.txt  package.xml
oped_teleopp/model/: model.h5  model_01-09-2021_11:53.h5  model_02-09-2021_06:39.h5  model_03-09-2021_23:27.h5  model_03-09-2021_23:32.h5  model_03-09-2021_23:40.h5  model_03-09-2021_23:55.h5  model_03-09-2021_23:59.h5  model_04-09-2021_05:26.h5  model_05-09-2021_03:56.npy  model_28-08-2021_09:14.h5  model_28-08-2021_17:16.h5  model_28-08-2021_20:47.h5  model_29-08-2021_04:10.h5  model_30-08-2021_17:54.h5  model_30-08-2021_23:53.h5  model_31-08-2021_11:30.h5  model_31-08-2021_22:34.h5  model_x_05-09-2021_10:21.npy  model_x_05-09-2021_11:51.npy  model_y_05-09-2021_10:21.npy  model_y_05-09-2021_11:51.npy  model_y_05-09-2021_15:06.npy  model_y_05-09-2021_19:01.npy  model_y_05-09-2021_20:15.npy  model_y_05-09-2021_20:19.npy  model_y_06-09-2021_11:37.npy  model_y_06-09-2021_15:26.npy  model_y_06-09-2021_21:41.npy  model_y_06-09-2021_22:45.npy  model_y_07-09-2021_07:43.npy  model_y_07-09-2021_11:26.npy  model_y_07-09-2021_15:51.npy  model_y_08-09-2021_01:03.npy  model_y_08-09-2021_09:34.npy  model_y_08-09-2021_09:52.npy  model_y_08-09-2021_15:06.npy  model_y_08-09-2021_15:11.npy
oped_teleopp/rewards/: reward01-09-2021_11:53.json  reward02-09-2021_06:39.json  reward03-09-2021_23:27.json  reward03-09-2021_23:32.json  reward03-09-2021_23:40.json  reward03-09-2021_23:55.json  reward03-09-2021_23:59.json  reward04-09-2021_05:26.json  reward05-09-2021_03:56.json  (+30 more)
(+128 files in other folders)
